logs/dagmawi-time.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/dagmawi_time'...
Compiling './lib/python3.5/site-packages/dagmawi_time/DagmawiTime.py'...
***   File "./lib/python3.5/site-packages/dagmawi_time/DagmawiTime.py", line 21
    print "%02d:%02d:%02d" % (time[2], time[1], time[0])
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dagmawi_time/ElementConnector.py'...
***   File "./lib/python3.5/site-packages/dagmawi_time/ElementConnector.py", line 20
    print str(p)
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dagmawi_time/Hour.py'...
***   File "./lib/python3.5/site-packages/dagmawi_time/Hour.py", line 11
    print DGTime.getMax()
               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dagmawi_time/Minute.py'...
***   File "./lib/python3.5/site-packages/dagmawi_time/Minute.py", line 11
    print DGTime.getMax()
               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dagmawi_time/Second.py'...
***   File "./lib/python3.5/site-packages/dagmawi_time/Second.py", line 11
    print DGTime.getMax()
               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dagmawi_time/TimeElement.py'...
***   File "./lib/python3.5/site-packages/dagmawi_time/TimeElement.py", line 19
    print 'Max not set for instance',self.getName()
                                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dagmawi_time-0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
